# Cross-Platform-Rendering-Engine

./: .gitignore  .gitmodules  Architecture.drawio  CMakeLists.txt  Notes.md  README.md  build.bat
assets/shaders/scene_rendering/: ls_shader.vs  shader.fs  shader.vs  untexture_shader.fs
include/: camera.h  global.h  gui.h  mesh.h  model.h  renderer.h  scene.h  shader.h  texture.h  ui.h  window.h
models/dragon-katana-oni-koroshi/: katana.mtl
models/franz-viehbocks-sokol-space-suit/: NHMW-Franz Viehboeck_low res.mtl
models/medieval-chest/: chest.mtl
models/old house/: model.mtl
models/old-camera-bag-rawscan/: bag.obj.mtl
models/robot_arc_r_42/: robot.mtl
models/supermarine-spitfire/: spitfire.mtl
models/sword/: sword.mtl
src/: camera.cpp  global.cpp  gui.cpp  main.cpp  mesh.cpp  model.cpp  obj_model_loader.cpp  renderer.cpp  scene.cpp  shader.cpp  shader.h  state.h  temporary_vertices.h  texture.cpp  ui.cpp  window.cpp
src/scenes/: pixel_rendering.h
src/shaders/: pixel_rendering.fs  pixel_rendering.vs  shader.fs  shader.vs
src/shaders/scene_rendering/: ls_shader.fs  ls_shader.vs  shader.fs  untexture_shader.fs
src/shaders/scene_rendering/backpack_shaders/: shader.fs  shader.vs
src/shaders/shaders_backup/pixel_rendering/: pixel_rendering.fs
src/ui/: ui_model.cpp  ui_model.h
src/util/: camera_movement.h  color.h  keyboard.h  lighting.h  math.h  mouse.h  obj_model_loader.cpp  rendering_type.h  settings.h  temporary_vertices.h  transformations.h
